--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,8 @@
-.card {
+section {
     display: flex;
-    width: fit-content;
-    flex-direction: column;
-    border: thin solid black;
-    padding: 3rem;
-    position: relative;
-    overflow: hidden;
-    gap: .25rem;
-    font-size: 1.25rem;
-}
-.card img {
-    width: 20vw;
-    height: 20vw;
-    object-fit: contain;
-}
-.rank {
-    position: absolute;
-    top: 0;
-    left: -1em;
-    padding: .25em 1em .25em 2em;
-    background-color: #BC4C05;
-    color: white;
-    transform: skew(-30deg);
+    flex-flow: wrap;
+    gap: 2rem;
+    max-width: 87.5rem;
+    box-sizing: border-box;
+    margin: 0 auto;
 }
